--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <!-- Start Design -->
   <div class="design">
     <div class="image">
-      <img decoding="async" src="/images/mobile.png" alt="mobile" />
+      <img decoding="async" src="images/mobile.png" alt="mobile" />
     </div>
     <div class="text">
       <h2>OUR DESIGN COMES WITH...
@@ -217,7 +217,7 @@
   <!-- end portfolio -->
   <!-- start video -->
   <div class="video">
-    <video autoplay muted loop src="/images/awesome-video.mp4" type="video/mp4"></video>
+    <video autoplay muted loop src="images/awesome-video.mp4" type="video/mp4"></video>
     <div class="text">
       <h2>SUPER AWESOME VIDEO HERE</h2>
       <p>Its All You Need</p>
