--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img decoding="async" src="/images/logo.png" alt="logo">
+        <img decoding="async" src="images/logo.png" alt="logo">
       </div>
       <nav>
         <i class="fas fa-bars toggle-menu"></i>
